# rust_graphics

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
Sources/: 02.html  03.html  main_old.c
Sources/Aufgaben/01/: 01.html
Sources/Aufgaben/02/: 02.html
Sources/Aufgaben/03/: 03.html  bresham.py
Sources/Aufgaben/04/: 04.html
Sources/Aufgaben/05/: 05.html
Sources/Aufgaben/06/: 06.html
Sources/Aufgaben/07/: 51_07.html
Sources/Aufgaben/08/: 08.html
Sources/Aufgaben/09/: 09.html
Sources/Aufgaben/10/: 10.html
assets/: sw.js
src/: camera.rs  canvas.rs  color.rs  displaybuffer.rs  engine.rs  inputhandler.rs  light_source.rs  main.rs  math.rs  mesh.rs  obj_loader.rs  primitives.rs  renderer.rs  scene.rs  types.rs
src/input/: inputhandler.rs  mod.rs
src/math/: matrix.rs  point.rs  vector.rs
src/models/: ball_obj.rs  cube_obj.rs  mod.rs  plane_obj.rs
src/renderer/: buffer.rs  color.rs  core.rs  draw_command.rs  font_provider.rs  fragment.rs  frustum.rs  hud.rs  mod.rs  passes.rs  rasterizer.rs  render_triangle.rs  renderer.rs  shader.rs  target.rs  view.rs  viewport.rs
src/scene/: boundingbox.rs  camera.rs  geometry.rs  light.rs  mod.rs  object.rs  primitives.rs  scene.rs  scene_impl.rs  scene_node.rs  scene_node_old.rs
src/types/: camera.rs  color.rs  display.rs  geometry.rs  mod.rs  primitives.rs  shader.rs
src/types/camera/: camera_impl.rs  frustum.rs  mod.rs
src/types/color/: color_rgb.rs  mod.rs
src/types/display/: mod.rs  screen_point.rs
src/utils/: bmp.rs  mod.rs  obj_loader.rs
(+19 files in other folders)
