[package]
name = "rust_graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", features = ["glow"] }
egui = "0.34.3"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }

# [profile.release]
# debug = true    # or 1 for smaller symbols
# strip = false   # Keep symbols in the binary
